# stabilize

./: .env.example  .gitignore  GEMINI.md  Makefile  README.md  mg.yaml  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
docs/: conf.py  index.rst  requirements.txt  stage-data-flow.md
docs/api/: events.rst  handlers.rst  models.rst  persistence.rst  queue.rst  tasks.rst
docs/examples/: http_requests.rst  parallel_processing.rst  shell_commands.rst  simple_pipeline.rst
docs/guide/: core_concepts.rst  data_flow.rst  error_handling.rst  event_sourcing.rst  flow_control.rst  getting_started.rst  persistence.rst  resilience.rst  tasks.rst
examples/: __init__.py  benchmark-overhead.py  docker-example.py  dynamic-routing-example.py  event-sourcing-example.py  golden-standard.py  highway-integration-example.py  http-example.py  lats-coding-agent.py  llama-example.py  python-example.py  python_servers.py  shell-example.py  ssh-example.py
golden_standard_tests/: __init__.py  conftest.py  test_golden_disaster_recovery.py  test_golden_v2.py
golden_standard_tests/expected/: disaster_recovery_expected_result.txt  v2_expected_result.txt
golden_standard_tests/workflows/: __init__.py  disaster_recovery_workflow.py  v2_workflow.py
migrations/: 01KDQ4N9QPJ6Q4MCV3V9GHWPV4_initial_schema.sql  01KDRK3TXW4R2GERC1WBCQYJGG_rag_embeddings.sql  01KE39HEAN221S7AWNS4A0H750_add_performance_indexes.sql  01KE4YJT2W8A6NBX5R7CQMJK84_add_dlq_table.sql  01KE5ZQT3X9B7PCS8R8DRMLN85_add_processed_messages.sql  01KE60R04X0C8QDTS9SEESMN96_add_task_version.sql  01KFA6JDAS811CB5RKPD1FBAST_add_stage_version.sql  01KGFG6RM7NRCJ2PPJ7FZAM0Y9_widen_message_id_column.sql  01KGHWCP1M2QSDE3TN4GUBLV8A_add_workflow_control_flow_patterns.sql
scripts/: release.py
src/stabilize/: __init__.py  assertions.py  audit.py  cli.py  conditions.py  config_validation.py  error_codes.py  errors.py  exceptions.py  expressions.py  finalizers.py  launcher.py  lifecycle.py  logging.py  metrics.py  orchestrator.py  recovery.py  tracing.py  verification.py
src/stabilize/cli/: __init__.py  commands.py  config.py  main.py  migrations.py  prompt_text.py
src/stabilize/context/: __init__.py  stage_context.py
src/stabilize/dag/: __init__.py  graph.py  readiness.py  topological.py
src/stabilize/errors/: __init__.py  base.py  permanent.py  task.py  transient.py  utils.py  verification.py  workflow.py
src/stabilize/events/: __init__.py  base.py  bus.py  recorder_old.py  replay.py  snapshots.py  subscriptions.py
src/stabilize/handlers/: __init__.py  add_multi_instance.py  base.py  cancel_region.py  cancel_stage.py  complete_stage.py  complete_task.py  complete_workflow.py  continue_parent_stage.py  jump_to_stage.py  run_task.py  signal_stage.py  skip_stage.py  start_stage.py  start_task.py  start_waiting_workflows.py  start_workflow.py
src/stabilize/migrations/: __init__.py
src/stabilize/models/: __init__.py  multi_instance.py  snapshot.py  stage.py  status.py  task.py  workflow.py
src/stabilize/monitor/: __init__.py  data.py  display.py  models.py
src/stabilize/persistence/: __init__.py  connection.py  factory.py  memory.py  postgres.py  (+5 more)
tests/: __init__.py  conftest.py  test_additional_coverage.py  test_airport_critical_bugs.py  test_assertions.py  test_backend_parity.py  test_backoff.py  test_bloom_dedup.py  test_bug_fixes.py  test_cancellation.py  test_concurrency.py  test_concurrency_stress.py  test_conditions.py  test_config_validation.py  test_config_versioning.py  test_critical_corner_cases.py  test_diamond_pattern.py  test_dlq_atomicity.py  test_docker_task.py  test_dynamic_routing.py  test_error_codes.py  test_event_upcasting.py  test_execution.py  test_failure_scenarios.py  test_finalizers.py  test_golden_standard.py  test_handler_config.py  test_http.py  test_integration.py  test_jump_correctness.py  test_jump_edge_cases.py  test_jump_fanin.py  test_message_deduplication_race.py  test_mission_critical_certification.py  test_phase_version.py  test_prompt_scenarios.py  test_python_task.py  test_queue.py  test_readiness.py  test_recovery.py  (+17 more)
tests/events/: __init__.py  test_event_bus.py  test_event_store.py  test_events.py  test_handler_events.py  test_projections.py  test_replay.py
(+150 files in other folders)
