[project]
name = "stabilize"
version = "0.10.4"
description = "Highway Workflow Engine - Stabilize execution layer"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
    {name = "Farshid Ashouri", email = "farsheed.ashouri@gmail.com"}
]
keywords = ["workflow", "dag", "orchestration", "pipeline", "task-runner"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "ulid-py>=1.1",
    "pydantic>=2.0",
]

[project.optional-dependencies]
postgres = [
    "psycopg[binary,pool]>=3.0",
    "migretti>=0.3",
]
rag = [
    "ragit>=0.7.5",
]
observability = [
    "structlog>=24.0",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
]
all = [
    "psycopg[binary,pool]>=3.0",
    "migretti>=0.3",
    "ragit>=0.7.5",
    "structlog>=24.0",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
]
dev = [
    "psycopg[binary,pool]>=3.0",
    "migretti>=0.3",
    "pytest>=8.0",
    "pytest-xdist>=3.0",
    "pytest-asyncio>=0.23",
    "testcontainers>=4.0",
    "ruff>=0.1",
    "mypy>=1.8",
    "structlog>=24.0",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
]

[project.scripts]
stabilize = "stabilize.cli:main"

[project.urls]
Homepage = "https://github.com/rodmena-limited/stabilize"
Repository = "https://github.com/rodmena-limited/stabilize"
Issues = "https://github.com/rodmena-limited/stabilize/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stabilize"]

[tool.hatch.build.targets.wheel.force-include]
"migrations" = "stabilize/migrations"
"examples" = "stabilize/examples"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = [
    "N804",  # First argument of a class method should be named `cls` - we use `mcs` for metaclasses
]

[tool.ruff.lint.per-file-ignores]
# Examples use logging.basicConfig before imports intentionally to suppress noise
# Also have hyphenated filenames which are not valid module names (not meant to be imported)
"examples/*" = ["E402", "N999", "E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:testcontainers.*:",
    "ignore::DeprecationWarning:psycopg_pool.*:",
]
